update configuration files

--- a/configuration_files/mapred-site.xml.template
+++ b/configuration_files/mapred-site.xml.template
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <?xml-stylesheet type="text/xsl" href="configuration.xsl"?>
 <!--
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,16 +17,5 @@
 <!-- Put site-specific property overrides in this file. -->
 
 <configuration>
-	<property>
-		<name>dfs.namenode.name.dir</name>
-		<value>/var/app/hadoop/data/nameNode</value>
-	</property>
-	<property>
-		<name>dfs.datanode.data.dir</name>
-		<value>/var/app/hadoop/data/dataNode</value>
-	</property>
-	<property>
-		<name>dfs.replication</name>
-		<value>2</value>
-	</property>
+
 </configuration>
